syntax ="proto3";

service UserService {
    rpc GetUserInformation(UserInfoReq) returns (UserInfoRes) {};
}

message UserInfoReq{
    string user_id =1;
}

message UserInfoRes {
    string user_id =1;
    string fullname=2;
    string email=3;
    string phone =4;
    string birthday =5;
}
